PortalPackage/ Enrollment Rx Core/objects/Term__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>Add_Drop_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Add/Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_To_Register__c</fullName>
        <description>ERx Custom Field</description>
        <label>Last Day To Register</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Desctiption__c</fullName>
        <description>ERx Custom Field</description>
        <inlineHelpText>Example:  Fall Semester – Track A</inlineHelpText>
        <label>Term Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Add_Drop_Date__c</columns>
        <columns>Last_Day_To_Register__c</columns>
        <columns>Term_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Terms</label>
    </listViews>
    <nameField>
        <label>Term ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>